--- a/Week 5/Week 5.vcxproj
+++ b/Week 5/Week 5.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{8a6c580b-bbec-454f-a287-d895c161bfd6}</ProjectGuid>
-    <RootNamespace>Week4</RootNamespace>
+    <ProjectGuid>{01e1c320-ab5f-4e1b-b330-51385e3fbcad}</ProjectGuid>
+    <RootNamespace>Week5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="UnorderedArray.h" />
+    <ClInclude Include="DoubleEndedLinkedList.h" />
+    <ClInclude Include="DoublyLinkedList.h" />
+    <ClInclude Include="SinglyLinkedList.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Testing.cpp" />
+    <ClCompile Include="DoubleEndedLinkedList.cpp" />
+    <ClCompile Include="DoublyLinkedListTest.cpp" />
+    <ClCompile Include="SinglyLinkedListTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
