--- a/Week 10/Week 10.vcxproj
+++ b/Week 10/Week 10.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{145363dd-87a5-4404-8dc0-a787b086c1a4}</ProjectGuid>
-    <RootNamespace>Week9</RootNamespace>
+    <ProjectGuid>{fac405ed-050f-487e-a1dc-b3a36267375f}</ProjectGuid>
+    <RootNamespace>Week10</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,25 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Deque.h" />
-    <ClInclude Include="DoublyLinkedList.h" />
-    <ClInclude Include="PriorityQueue.h" />
-    <ClInclude Include="PriorityQueueLinkedList.h" />
-    <ClInclude Include="Queue.h" />
+    <ClInclude Include="DoubleHashing.h" />
+    <ClInclude Include="LinearProbing.h" />
+    <ClInclude Include="SeperateChaining.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PriorityQueueTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="DequeTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="QueueTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="LinearProbingDemo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
