--- a/Week 14/Week 14.vcxproj
+++ b/Week 14/Week 14.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{55ff520c-d6e5-422e-82cd-a6e7eb87dd80}</ProjectGuid>
-    <RootNamespace>Week13</RootNamespace>
+    <ProjectGuid>{0518fa4e-988b-493f-8640-bf2da22d2701}</ProjectGuid>
+    <RootNamespace>Week14</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,18 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="HeapSortTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="HeapTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="STLHeapFunctionsTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-    </ClCompile>
+    <ClInclude Include="Graph.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Heap.h" />
+    <ClCompile Include="BreadthFirstTest.cpp" />
+    <ClCompile Include="DepthFirstGraphTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
